[gd_scene load_steps=4 format=3 uid="uid://c58i51no31v1x"]

[ext_resource type="Script" path="res://scenes/HUD.gd" id="1_l8cfq"]
[ext_resource type="Script" path="res://scenes/Altimeter.gd" id="2_xg5d5"]
[ext_resource type="Script" path="res://scenes/AltimeterScroll.gd" id="3_2jnk3"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8cfq")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 2778.0
offset_bottom = 1284.0

[node name="Left" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="InFlightLabel" type="Label" parent="Container/Left"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="TempLabel" type="Label" parent="Container/Left"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="Center" type="Control" parent="Container"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="Altimeter" type="Label" parent="Container/Center"]
layout_mode = 0
offset_left = 2070.0
offset_top = 642.0
offset_right = 2070.0
offset_bottom = 642.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
horizontal_alignment = 2
script = ExtResource("2_xg5d5")

[node name="Scroll" type="TextureRect" parent="Container/Center/Altimeter"]
layout_mode = 0
script = ExtResource("3_2jnk3")

[node name="Right" type="VBoxContainer" parent="Container"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="StreamOn" type="Button" parent="Container/Right"]
layout_mode = 2
text = "Stream ON"

[node name="Video" type="Button" parent="Container/Right"]
layout_mode = 2
text = "Video ON"
